--- a/Week7PracticalNotebook.ipynb
+++ b/Week7PracticalNotebook.ipynb
@@ -112,17 +112,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "solution": "shown",
     "solution2": "hidden"
    },
    "source": [
+    "Answers\n",
+    "\n",
     "To view the data object: `tay`\n",
     "\n",
     "To view the first few rows of data: `head(tay)`\n",
     "\n",
-    "To view the nunber of rows and columna (i.e. the dimensions of the data): `dim(tay)`\n",
-    "\n",
-    "**End of solution**"
+    "To view the nunber of rows and columna (i.e. the dimensions of the data): `dim(tay)`"
    ]
   },
   {
@@ -246,19 +249,22 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "solution": "shown",
     "solution2": "hidden"
    },
    "source": [
+    "Answers\n",
+    "\n",
     "To aggregate by minimum values: `TayMin<- aggregate(Flowrate ~ Year, data=tay, FUN=min)`\n",
     "\n",
     "By maximum values: `TayMax<- aggregate(Flowrate ~ Year, data=tay, FUN=max)` \n",
     "\n",
     "By Standard deviation: `TaySd<- aggregate(Flowrate ~ Year, data=tay, FUN=sd)`\n",
     "\n",
-    "By sum of the values: `TaySum<- aggregate(Flowrate ~ Year, data=tay, FUN=sum)`\n",
-    "\n",
-    "**End of Solution**"
+    "By sum of the values: `TaySum<- aggregate(Flowrate ~ Year, data=tay, FUN=sum)`"
    ]
   },
   {
@@ -592,15 +598,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "solution": "shown",
     "solution2": "hidden"
    },
    "source": [
+    "Answers\n",
+    "\n",
     "To create a scatter graph for the retailer_count variable and income_rank, use: \n",
     "\n",
-    "`ggplot(TobaccoDeprivation, aes(income_rank, retailer_count)) + geom_point() + labs(x = \"Income Deprivation Rank\", y = \"Tobacco Retailers (count)\", title = \"Scatter of Count of Tobacco Retailers and Income Deprivation\")`\n",
-    "\n",
-    "**End of solution**"
+    "`ggplot(TobaccoDeprivation, aes(income_rank, retailer_count)) + geom_point() + labs(x = \"Income Deprivation Rank\", y = \"Tobacco Retailers (count)\", title = \"Scatter of Count of Tobacco Retailers and Income Deprivation\")`"
    ]
   },
   {
@@ -633,9 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -730,15 +737,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "solution": "shown",
     "solution2": "hidden"
    },
    "source": [
+    "Answers\n",
+    "\n",
     "To calculate the correlation between retailer rate and inome deprivation rank use:\n",
     "\n",
-    "`cor.test(TobaccoDeprivation$retailer_per_10000, TobaccoDeprivation$health_rank, method=\"pearson\")`\n",
-    "\n",
-    "**End of solution**"
+    "`cor.test(TobaccoDeprivation$retailer_per_10000, TobaccoDeprivation$health_rank, method=\"pearson\")`"
    ]
   },
   {
@@ -943,9 +953,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
-    "**Answers: This exercise has many steps! In order:**\n",
+    "Answers\n",
+    "\n",
+    "This exercise has many steps! In order:**\n",
     "\n",
     "a. To create the new datasets use: \n",
     "\n",
@@ -979,7 +995,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.4.0"
   }
  },
  "nbformat": 4,
