--- a/Week7PracticalNotebook.ipynb
+++ b/Week7PracticalNotebook.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "<b>HINT</b> Remember to think through what each part of the code is doing here. And how you can change the labels (e.g. changing after the equals sign for `main`, `ylab` and `xlab`) to whatever you want!\n",
     "\n",
-    "`hist(tay$Flowrate, main = \"Flow Histogram\", ylab=\"Flowrate\", xlab=\"Frequency\")`"
+    "`hist(tay$Flowrate, main = \"Flow Histogram\", ylab=\"Frequency\", xlab=\"Flowrate\")`"
    ]
   },
   {
