--- a/Week7PracticalNotebook.ipynb
+++ b/Week7PracticalNotebook.ipynb
@@ -840,7 +840,7 @@
     "\n",
     "As we discussed in lecture the hugely powerful thing about regression is its abillity to make **predictions**. We can do this ourselves by substituting our values from above into the **y = m * x + c** formula. This gives us the equation for the best-fit line specific to the analysis we have just completed. It looks like the below:\n",
     "\n",
-    "**Tobacco retailer Rate = 0.009187 x income rank - 237.5** \n",
+    "**Tobacco retailer Rate = 0.009187 x income rank + 237.5** \n",
     "\n",
     "We can use this formula to make our predictions by predicting a value of tobacco retailer rate given a known value of income deprivation rank. \n",
     "\n",
