--- a/Week7PracticalNotebook.ipynb
+++ b/Week7PracticalNotebook.ipynb
@@ -6,7 +6,16 @@
     "solution": "hidden"
    },
    "source": [
-    "# PRACTICAL 2 (WEEK 7): Correlation and Regression (and more plots)\n",
+    "# PRACTICAL 2 (WEEK 7): Correlation and Regression (and more plots)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Last week, we focused on the various we can **describe** and **visualise** single variables in our data using a variety of descriptive statistics and different graphs and plots. This week, we are shifting a bit to start to consider relationships between different variables. How are they related to each other, how strong is that relationhip, does knowing the value of one variable tell us something about the value of another (e.g. can we make predictions). We are going to move from **description** to **analysis**.  \n",
+    "\n",
+    "Before we do that however, we are going to also cover some basic but important data management tasks in R. Aggregating our data and saving copies of the data to the hard drive. \n",
     "\n",
     "By the end of this practical you should be able to:\n",
     "* Aggregate data in R by factors\n",
@@ -75,7 +84,7 @@
     "\n",
     "You can see the solution below if you get stuck and forget the commands.\n",
     "\n",
-    "HINT: the commands you might consider are simply typing the name of the data, `head()` and `dim()`   \n",
+    "HINT: the commands you might consider are simply typing the name of the data or by using the `head()` and `dim()`   \n",
     "\n",
     "Remember to put the name of the data in the brackets when the command requires it! "
    ]
@@ -133,7 +142,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "Remember about the importance of making sure the variable types are correct? We also need to change the **Month** and **Year** variables in the Tay data to make sure they are **factor** (or **fct** in R terms) variables. Let's do this now in the cells below (remember to look at last weeks notebook for how to do this but see hint below if you get stuck figuring out the command). Remember to view the data again to make sure the changes have been made.\n",
+    "Remember about the importance of making sure the variable types are correct stored in R? We also need to change the **Month** and **Year** variables in the Tay data to make sure they are **factor** (or **fct** in R terms) variables. As a reminder from last week, let's do this now in the cells below (remember to look at last weeks notebook for how to do this but see hint below if you get stuck figuring out the command). Remember to view the data again to make sure the changes have been made.\n",
     "    \n",
     "\n",
     "**Hint:**\n",
@@ -185,7 +194,7 @@
     "\n",
     "Aggregating data is a tool you will need in order to complete the feedback assignment, and is also a very valuable and important tool in statistical analysis in general. We are going to practice this on the tay data.\n",
     "\n",
-    "Firstly, what is aggregation? Let’s say you wanted yearly (annual) average flow rate (i.e. instead of daily average flow rate), aggregation is what you would do to achieve this. Aggregation is basically the process of summarising data by a grouping (or categorical variable). The command below calculates average flowrates per year:   \n",
+    "Firstly, what is aggregation? Currently the data has average daily flow rate but let’s say you wanted yearly (annual) average flow rate instead. This is what data aggregation is; basically the process of summarising data by a grouping (or categorical variable). The command below calculates average flowrates per year:   \n",
     "\n",
     "`TayAvg <- aggregate(Flowrate ~ Year, data=tay, FUN=mean)`\n",
     "\n",
@@ -214,6 +223,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should be able to see that it is a much smaller dataset than the original `Tay` data because we have combined data from each year into a single row (by taking average of each daily value in each year)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "solution": "shown",
     "solution_first": true
@@ -221,7 +237,7 @@
    "source": [
     "***\n",
     "### Exercise 2\n",
-    "Have a go at producing a **new** data object this time using one of the other aggregation functions (e.g. `sum`, `sd`, `min` or `max`). Take a look at the resulting new dataset as well once you have run the command.\n",
+    "Have a go at producing a **new** data object this time using one of the other aggregation functions (e.g. `sum`, `sd`, `min` or `max`). Take a look at the resulting new dataset as well once you have run the command. Try and think about what value each summary type might produce.\n",
     "\n",
     "HINT: You'll need the `aggregate()` command here!"
    ]
@@ -351,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the data we can see that each row corresponds to something called a \"datazone\". These are the smallest geographical units at which data will be released to the public in Scotland and are groups of 2011 Census output areas which have populations of around 500 to 1,000 residents. There are 6,976 Data Zones in Scotland. You can have a look at these in more detail here: https://simd.scot/#/simd2020/BTTTFTT/9/-4.0000/55.9000/\n",
+    "Looking at the data we can see that each row corresponds to something called a \"datazone\". These are the smallest geographical units that data is allowed to be released to the public in Scotland and are groups of 2011 Census output areas which have populations of around 500 to 1,000 residents. There are 6,976 Data Zones in Scotland. You can have a look at these in more detail here: https://simd.scot/#/simd2020/BTTTFTT/9/-4.0000/55.9000/\n",
     "\n",
     "The image below shows a map of datazones in Edinburgh and Glasgow:\n",
     "\n",
@@ -374,9 +390,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create some plots with this new data. In the previous practical we learnt some basic graphing commands. This week, we are going to learn some more advanced but much more useful commands, based on the `ggplot()` command. `ggplot()` is famous among data scientists and analysts for the huge range of graphs and plots that it can produce and the relative ease with which they can be created. It works on a principle of layers, where a plot is built up layer by layer. This allows more complex plots to be produced step by step. \n",
+    "Now let's create some plots with this new data. In the previous practical we learnt some basic graphing commands. This week, we are going to learn some more advanced but much more useful commands, based on the `ggplot()` command. `ggplot()` is famous among data scientists and analysts for the huge range of graphs and plots that it can produce and the relative ease with which they can be created. It works on a principle of layers, where a plot is built up by constructing multiple layers one on top of the other. This allows more complex plots to be produced step by step. \n",
     "\n",
-    "Later on in the practical we are going to carry out correlation and regression analysis. But the first step in is almost always to produce  scatter plot. Let's remind ourselves of our overall research question; **Do more deprived areas of Scotland have greater access to tobbaco products?**. Remember the equation for a straight line:\n",
+    "Later on in the practical we are going to carry out correlation and regression analysis but before we geo to that point, the first step in is almost always to produce  scatter plot. Let's remind ourselves of our overall research question; **Do more deprived areas of Scotland have greater access to tobbaco products?**. Remember the equation for a straight line:\n",
     "\n",
     "**y = m * x + c**\n",
     "\n",
@@ -443,7 +459,7 @@
     "\n",
     "If you remember from the previous practical, `<-` is an assignment operator. When we used this before, we used it to assign data to an object. But we can do exactly the same thing with a graph (in fact with anything in R). \n",
     "\n",
-    "In other words, we have asigned the graph to an object called `graph`(we could call it anything we wanted though, think of it like a codename!). To see the graph, we just type the name of the object. Do this in the cell below, e.g. just type `graph`."
+    "In other words, we have asigned the graph to an object called `graph`(we could call it anything we wanted though, think of it like a codename!). To see the graph, we just type the name of the object we wish to view. Do this in the cell below, e.g. just type `graph`."
    ]
   },
   {
@@ -535,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's generate a new line graph plot for the **health deprivation rank** variable. Remember because we are making a new plot, we have to create a new base graph as well. i.e. we have to include the `ggplot(TobaccoDeprivation, aes(retailer_per_10000, health_rank))`, as below.\n",
+    "Now, let's generate a new scatter graph plot for the **health deprivation rank** variable. Remember because we are making a new plot, we have to create a new base graph as well. i.e. we have to include the `ggplot(TobaccoDeprivation, aes(retailer_per_10000, health_rank))`, as below.\n",
     "\n",
     "`scatter_health <- ggplot(TobaccoDeprivation, aes(retailer_per_10000, health_rank)) + geom_point() + labs(x = \"Health Deprivation Rank\", y = \"Tobacco Retailers (per 10000 population\", title = \"Scatter of Tobacco Retailers and Health Deprivation\")`\n",
     "\n",
@@ -784,7 +800,7 @@
     "***\n",
     "## Part 4: Regression analysis\n",
     "\n",
-    "In Part 2, you generated a best-fit line for the scatterplot, but we do not yet know the Equation of the line (i.e. y = mx + c), or its R2 value, which gives an indication of the strength of the fit. For this, we need to do a formal regression analysis. Remember, we want to predict Retailer Rates as a response to deprivation. It is a very different question than if we chose Retailer Rates as the Explanatory Variable and deprivation as the Response Variable – do you see the difference?\n",
+    "In Part 2, you generated a best-fit line for the scatterplot, but we do not yet know the Equation of the line (i.e. y = mx + c), or its R2 value, which gives an indication of the strength of the fit (i.e. how close the points are to the line of best fit). For this, we need to do a formal regression analysis. Remember, we want to predict Retailer Rates as a response to deprivation. It is a very different question than if we chose Retailer Rates as the Explanatory Variable and deprivation as the Response Variable – do you see the difference?\n",
     "\n",
     "Let's get on with carrying out our regression analysis. Linear regression analysis is carried out using the `lm()` command which stands for \"linear model\". The code to implement this model is below:\n",
     "\n",
@@ -995,7 +1011,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.0"
+   "version": "4.5.1"
   }
  },
  "nbformat": 4,
