--- a/Week7PracticalNotebook.ipynb
+++ b/Week7PracticalNotebook.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last week, we focused on the various we can **describe** and **visualise** single variables in our data using a variety of descriptive statistics and different graphs and plots. This week, we are shifting a bit to start to consider relationships between different variables. How are they related to each other, how strong is that relationhip, does knowing the value of one variable tell us something about the value of another (e.g. can we make predictions). We are going to move from **description** to **analysis**.  \n",
+    "Last week, we focused on the various ways we can **describe** and **visualise** single variables in our data using a variety of descriptive statistics and different graphs and plots. This week, we are shifting a bit to start to consider relationships between different variables. How are they related to each other, how strong is that relationhip, does knowing the value of one variable tell us something about the value of another (e.g. can we make predictions). We are going to move from **description** to **analysis**.  \n",
     "\n",
     "Before we do that however, we are going to also cover some basic but important data management tasks in R. Aggregating our data and saving copies of the data to the hard drive. \n",
     "\n",
